# tty-snd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.win  README.md  ROADMAP.md  alad.c  alad.h  boxfilter_main.c  build.bat  build.sh  cap_by_percentage_fall_mon_main.c  change_rolloff_v_main.c  clean.bat  common.h  complexify_main.c  cutoff_intervals.c  f80.c  falling_monotonizer_main.c  fft.c  fft_main.c  formant_main.c  formant_via_gsl_blas_main.c  gauss.c  graph_main.c  ifft_main.c  informant_algs.c  larynx_test.sh  libformants.h  lpc.c  marple-alg_2.c  mic_src_main.c  mirror_main.c  newformant_test_2_main.c  newformant_test_main.c  peak-shift-rolloff_main.c  peak_dbg_main.c  peak_main.c  play_main.c  (+16 more)
win32/: unistd.h
